		(add_imm in cpu_m88k_instr.c).
		Continuing on dev_pcc2 (used by mvme187).
		Working on M88K interrupts. Very unstable so far; OpenBSD/
		mvme88k bugs out randomly after the first few interrupts.
20081115	More work on dev_pcc2.
		Found the "random" failure bug: the M88K interrupt handling
		code didn't execute the interrupted instruction, but skipped
		it instead.
		Fixing a bug in the implementation of the m88k 'ext'
		instruction (it worked like extu!).
		Adding disassembly of all 88100 floating point instructions.
		Minor updates to make the code build with GCC "4.4.0 20081017".
20081116	Implementing the m88k flt.ss, flt.ds, trnc.ss, trnc.sd, and
		fadd.dds floating point instructions.
20081121	Updating the HelenOS version in the documentation to 0.3.0.
		Continuing on 88100 interrupt/exception handling.
20081125	Bringing back the dummy machine_iyonix.c, which was removed
		in SVN rev. 4866.
		Fixing a bug in ARM pc-relative loads, when loading within
		the same page as the pc.
20081126	Continuing on the Iyonix mode: connecting initial i80321
		interrupts, and importing NetBSD/iyonix' bootconfig.h.
20081127	Importing iopi2creg.h from NetBSD (ARM Xscale I2C registers).
		Implementing the SH4 fsrra instruction, 1/sqrt(x), and the
		fipr instruction (vector dot-product).
20081203	Using register names in dev_clmpcc, but no actual progress on
		getting OpenBSD/mvme88k to boot further.
		FINALLY found the M88K bug I've been hunting: conditional
		branches with delay slots did not set the delay target address
		correctly in the case the branch was _not_ taken.
20081204	Interrupt exceptions (in cpu_dyntrans.c) are no longer
		generated while single-stepping. (It was too annoying.)
20081206	Implementing rudimentary tx/rx interrupts for clmpcc;
		OpenBSD/mvme88k can input/output stuff in userland now :)
		Implementing the "max negative number" condition of the
		M88K bcnd instruction.
		Implementing the M88K triadic register 'rot' instruction.